# Ray

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CustomNodeWidget.sln  GenerateProject.bat  GenerateProject.sh  LICENSE.txt  NodePlanningEditor.sln  ProjectInfo.txt  README  README.md  build.bat  build.sh  premake5.lua
Raditor/: CMakeLists.txt  Gizmo.cpp  Gizmo.h  main.cpp
Ray/: CMakeLists.txt  RBase.h  Rpch.h
Ray/Components/: RComponent.h  RDirectionalLight.cpp  RDirectionalLight.h  RHierachyComponent.cpp  RHierachyComponent.h  RMesh.cpp  RMesh.h  RMeshContainer.cpp  RMeshContainer.h  RMeshRenderer.cpp  RMeshRenderer.h  RMeshRenderingResources.cpp  RMeshRenderingResources.h  RModel.cpp  RModel.h  RPointLight.cpp  RPointLight.h  RScriptableEntity.cpp  RScriptableEntity.h  RSkybox.cpp  RSkybox.h  RSpotLight.cpp  RSpotLight.h  RTagComponent.cpp  RTagComponent.h  RTextComponent.cpp  RTextComponent.h  RTextRenderer.cpp  RTextRenderer.h  RTransform.cpp  RTransform.h
Ray/Core/: RDynamicVertex.cpp  RDynamicVertex.h  REngine.cpp  REngine.h  RFrustum.cpp  RFrustum.h  RMath.cpp  RMath.h  RRendererLoader.cpp  RRendererLoader.h  RResource.cpp  RResource.h  RResourceManager.cpp  RResourceManager.h  RTime.cpp  RTime.h
Ray/Devices/: RKeyboard.cpp  RKeyboard.h  RMouse.cpp  RMouse.h  RWindow.cpp  RWindow.h
Ray/Events/: RCustomEvents.h  REngineEvents.h  REventDispatcher.cpp  REventDispatcher.h  REventListener.cpp  REventListener.h  RKeyboardEvents.h  RMouseEvents.h
Ray/Filesystem/: RJSON.cpp  RJSON.h
Ray/Graphics/: RCodex.h  RGraphics.cpp  RGraphics.h
Ray/Layers/: Layer.cpp  Layer.h  RLayer.cpp  RLayer.h
Ray/Mono/: RFunction.cpp  RFunction.h  RFunctionBase.cpp  RFunctionBase.h  RObject.cpp  RObject.h  RScript.cpp  RScript.h  RStaticFunction.cpp  RStaticFunction.h
Ray/Scene/: RCamera.cpp  RCamera.h  REntity.cpp  REntity.h  RScene.cpp  RScene.h  RSceneDescriptor.cpp  RSceneDescriptor.h
Ray/ShaderGraph/: RShaderGenerator.cpp
Ray/Shading/: RMaterial.cpp  RMaterial.h  RMaterialDataContainer.cpp  RMaterialDataContainer.h
Ray/UI/: RButton.cpp  RButton.h  RImGui.cpp  RImGui.h  RWidget.cpp  RWidget.h
Ray/Utils/: RAssert.h  RException.cpp  RException.h  RGeometricPrimitives.cpp  RGeometricPrimitives.h  RImGui.cpp  RImGui.h  RLogger.cpp  RLogger.h  RModel.cpp  RModel.h  ROStringStream.h  RString.cpp  RString.h  RThreadPool.cpp  RThreadPool.h  RTypeTraits.h
RayBase/: CMakeLists.txt  RAssert.h  RBase.h  RException.cpp  RException.h  RLogger.cpp  RLogger.h  RMath.cpp  RMath.h  RNonCopyable.h  RString.cpp  RString.h  RThreadPool.cpp  RThreadPool.h  RTime.h  Rpch.h
RayBase/Filesystem/: RJSON.cpp  RJSON.h
RayRenderer/: CMakeLists.txt  RBase.h  Rpch.h
RayRenderer/Core/: RBuffer.h  RCommandBuffer.h  RCommandPool.h  RCore.c  RCore.h  RDeviceMemory.h  RFramebuffer.h  RImage.h  RImageView.h  RInstance.h  RLogicalDevice.h  RPhysicalDevice.h  RRenderPass.h  RSampler.h  RSurface.h  RSwapchain.h  RUtils.c  RUtils.h
RayRenderer/OpenGL/: CMakeLists.txt  Rpch.h
RayRenderer/Pipeline/: RDescriptor.h  RPipeline.h  RShader.h  RUniform.h
RayRenderer/Synchronization/: RFence.h  RSemaphore.h
RayRenderer/Vulkan/: CMakeLists.txt  Rpch.h
Sources/: CMakeLists.txt  RBase.h  Rpch.h
Sources/Cameras/: RCamera.cpp  RCamera.h
Sources/Components/: Class.cpp  Class.h  RComponent.h  RGeometricPrimitives.cpp  RGeometricPrimitives.h  RMaterial.cpp  RMaterial.h  RMesh.cpp  RMesh.h  RMeshRenderer.cpp  RMeshRenderer.h  RModel.cpp  RModel.h  RParentEntity.cpp  RParentEntity.h  RPointLight.cpp  RPointLight.h  RScriptableEntity.cpp  RScriptableEntity.h  RSkybox.cpp  RSkybox.h  RTagComponent.h  RTransform.cpp  RTransform.h
Sources/Core/: RApplication.cpp  RApplication.h  RCamera.cpp  RCamera.h  RColor.h  RComponent.h  RDynamicVertex.cpp  RDynamicVertex.h  REngine.cpp  REngine.h  REntity.h  RFrustum.cpp  RGeometricPrimitives.cpp  RGeometricPrimitives.h  RKeyCodes.h  RMath.cpp  RMath.h  RScene.cpp  RScene.h  RTime.cpp  RTime.h  RVertex.h
Sources/Debug/: RAssert.h  RException.cpp  RException.h  RLogger.cpp  RLogger.h
Sources/Devices/: RKeyCodes.h  RKeyboard.cpp  RKeyboard.h  RMouse.cpp  RMouse.h  RWindow.cpp  RWindow.h
Sources/Events/: REngineEvents.h  REventDispatcher.h  REventListener.h  RKeyboardEvents.h  RMouseEvents.h
Sources/Filesystem/: RJSON.cpp
Sources/Geometry/: RMesh.cpp  RMesh.h  RModel.cpp  RModel.h
Sources/Graphics/: RCodex.h  RGraphics.cpp  RGraphics.h  RRenderStage.cpp  RRenderStage.h  RRenderer.cpp  RRenderer.h  RVertex.h
Sources/ImGui/: RImGui.cpp  RImGui.h
Sources/Input/: RKeyboard.cpp  RKeyboard.h  RMouse.cpp  RMouse.h
Sources/Mono/: RFunction.cpp  RFunction.h  RFunctionBase.cpp  RObject.cpp  RObject.h  RScript.cpp  RScript.h  RStaticFunction.cpp  RStaticFunction.h
Sources/Primitives/: RComponents.cpp  RMesh.cpp  RMesh.h
Sources/Resources/: RImage.cpp  RImage.h  RImage2D.cpp  RImage2D.h  RImageDepth.cpp  RImageDepth.h  RResource.h
Sources/Scene/: RCamera.cpp  RCamera.h  REntity.cpp  REntity.h  RScene.cpp  RScene.h
Sources/ShaderGraph/: RFlatShaderGenerator.cpp  RFlatShaderGenerator.h  RFragmentShaderGenerator.cpp  RFragmentShaderGenerator.h  RPBRShaderGenerator.cpp  RPBRShaderGenerator.h  RShaderGenerator.cpp  RShaderGenerator.h  RVertexShaderGenerator.cpp  RVertexShaderGenerator.h
Sources/Shading/: RMaterial.cpp  RMaterial.h  RStandardMaterial.cpp  RStandardMaterial.h
Sources/UI/: RButton.cpp  RButton.h  RImGui.cpp  RImGui.h  RWidget.cpp  RWidget.h
Sources/Utils/: RAssert.h  RException.h  RGeometricPrimitives.cpp  RGeometricPrimitives.h  RLogger.cpp  RLogger.h  RMath.h  RModel.cpp  RModel.h  RNonCopyable.h  RQueue.h  RSerialize.h  RSerialize.inl  RStack.h  RString.cpp  RString.h  RThreadPool.cpp  RThreadPool.h  RTimestep.h  RTypeTraits.h
Tests/: CMakeLists.txt  ImGuiWindows.inl
Tests/AssetManager/: CMakeLists.txt  main.cpp
Tests/Bloom/: CMakeLists.txt
Tests/Camera/: CMakeLists.txt  main.cpp
Tests/Lighting/: CMakeLists.txt  main.cpp
Tests/ManyTriangles/: CMakeLists.txt  main.cpp
Tests/MaterialSystem/: CMakeLists.txt  main.cpp
(+1384 files in other folders)
